--- a/css/main.css
+++ b/css/main.css
@@ -57,8 +57,9 @@ body {
 
 }
 .cover img {
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
+    height:50vh;
     
 }
 
